--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "short_ur_ls",
-  "version": "0.1.0",
-  "bin": {
-    "short_ur_ls": "bin/short_ur_ls.js"
-  },
+  "name": "shorturls",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "aws-cdk": "2.51.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~3.9.7"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.51.1",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
   }
 }
