bucket URL passthrough

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,7 @@ phases:
     commands:
       - "npm run build"
       - "$functionURL > functionURL.txt"
+      - "$bucketURL > bucketURL.txt"
 artifacts:
   base-directory: "dist"
   files: 
